@@ -1,6 +1,9 @@
 # $Id$
 
 if BUILD_DOCUMENTATION
+
+EXTRA_DIST = overview.edoc stylesheet.css
+
 stylesheet.css:
 	(test "$(srcdir)" != "." &&\
 	 (test ! -e "$@" || test "$(srcdir)/$@" -nt "$@") &&\
@@ -11,14 +14,15 @@ erlang.png:
 ERL_SRCS = $(top_srcdir)/src/core/*.erl					\
 	   $(top_srcdir)/src/server/*.erl				\
 	   $(top_srcdir)/src/client/*.erl				\
-	   $(top_srcdir)/src/compat/*.erl
+	   $(top_srcdir)/src/compat/*.erl				\
+	   $(top_srcdir)/src/examples/*.erl
 
 index.html: overview.edoc $(ERL_SRCS) stylesheet.css
 	$(ERL) -noshell\
 		-run edoc_run application "'$(PACKAGE_NAME)'" '"$(top_srcdir)"'\
 		'[{def, {vsn, "$(PACKAGE_VERSION)"}}, {dir, "."}, {stylesheet, "stylesheet.css"}, {preprocess, true}, no_packages]'\
 		-s erlang halt
-	$(SED) -i'' -e 's|</title>|</title><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">|' *.html
+	$(SED) -i '' -e 's|</title>|</title><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">|' *.html
 
 all-local: index.html
 
@@ -26,7 +30,9 @@ clean-local:
 	(test "$(srcdir)" != "." && rm -f stylesheet.css) || :
 
 htmldocdir = $(ERLANG_INSTALL_LIB_DIR_exmpp)/doc/html
-nodist_htmldoc_DATA = *.html stylesheet.css erlang.png
+
+htmldoc_DATA = *.html stylesheet.css erlang.png
 
 CLEANFILES = *.html edoc-info erlang.png
+
 endif
